--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -17,7 +17,7 @@
     </ul>
     <form *ngIf="!loggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
       <input class="form-control mr-sm-2" type="text" required name="username" placeholder="Username" [(ngModel)]="model.username" >
-      <input class="form-control mr-sm-2" type="text" required name="password" placeholder="Password" [(ngModel)]="model.password" >
+      <input class="form-control mr-sm-2" type="password" required name="password" placeholder="Password" [(ngModel)]="model.password" >
       <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
     </form>
     <div *ngIf="loggedIn()" class="dropdown">
